getting github pages

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ author:
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: spanini2/salbann
+repository: spanini2/salban_website
 repository_tree: master
 
 
